@@ -14,6 +14,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.StringWriter;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
@@ -560,12 +562,11 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 		}
 	}
 
-	private void downloadAndExtractZipFile(File projectFolder, String cloneURL, String commitId)
-			throws IOException {
+	private void downloadAndExtractZipFile(File projectFolder, String cloneURL, String commitId) throws IOException, URISyntaxException {
 		String downloadLink = extractDownloadLink(cloneURL, commitId);
 		File destinationFile = new File(projectFolder.getParentFile(), projectFolder.getName() + "-" + commitId + ".zip");
 		logger.info(String.format("Downloading archive %s", downloadLink));
-		FileUtils.copyURLToFile(new URL(downloadLink), destinationFile);
+		FileUtils.copyURLToFile(new URI(downloadLink).toURL(), destinationFile);
 		logger.info(String.format("Unzipping archive %s", downloadLink));
 		java.util.zip.ZipFile zipFile = new ZipFile(destinationFile);
 		try {
@@ -1388,17 +1389,16 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 					}
 					else {
 						URL currentRawURL = commitFile.getRawUrl();
-						InputStream currentRawFileInputStream = currentRawURL.openStream();
-						currentRawFile = streamToString(currentRawFileInputStream);
+						currentRawFile = fetchRawFileContent(currentRawURL);
 						String rawURLInParentCommit = currentRawURL.toString().replace(commitId, parentCommitId);
-						InputStream parentRawFileInputStream = new URL(rawURLInParentCommit).openStream();
-						parentRawFile = streamToString(parentRawFileInputStream);
+						URL parentRawURL = new URI(rawURLInParentCommit).toURL();
+						parentRawFile = fetchRawFileContent(parentRawURL);
 					}
 					if(!filesBefore.containsKey(fileName))
 						filesBefore.put(fileName, parentRawFile);
 					filesCurrent.put(fileName, currentRawFile);
 				}
-				catch(IOException e) {
+				catch(IOException | URISyntaxException e) {
 					e.printStackTrace();
 				}
 			};
@@ -1414,8 +1414,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 					}
 					else {
 						URL currentRawURL = commitFile.getRawUrl();
-						InputStream currentRawFileInputStream = currentRawURL.openStream();
-						currentRawFile = streamToString(currentRawFileInputStream);
+						currentRawFile = fetchRawFileContent(currentRawURL);
 					}
 					filesCurrent.put(fileName, currentRawFile);
 				}
@@ -1435,8 +1434,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 					}
 					else {
 						URL rawURL = commitFile.getRawUrl();
-						InputStream rawFileInputStream = rawURL.openStream();
-						parentRawFile = streamToString(rawFileInputStream);
+						parentRawFile = fetchRawFileContent(rawURL);
 					}
 					filesBefore.put(fileName, parentRawFile);
 					if(fileName.contains("/")) {
@@ -1464,13 +1462,12 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 					}
 					else {
 						URL currentRawURL = commitFile.getRawUrl();
-						InputStream currentRawFileInputStream = currentRawURL.openStream();
-						currentRawFile = streamToString(currentRawFileInputStream);
+						currentRawFile = fetchRawFileContent(currentRawURL);
 						String encodedFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
 						String encodedPreviousFilename = URLEncoder.encode(previousFilename, StandardCharsets.UTF_8);
 						String rawURLInParentCommit = currentRawURL.toString().replace(commitId, parentCommitId).replace(encodedFileName, encodedPreviousFilename);
-						InputStream parentRawFileInputStream = new URL(rawURLInParentCommit).openStream();
-						parentRawFile = streamToString(parentRawFileInputStream);
+						URL parentRawURL = new URI(rawURLInParentCommit).toURL();
+						parentRawFile = fetchRawFileContent(parentRawURL);
 					}
 					if(!filesBefore.containsKey(previousFilename))
 						filesBefore.put(previousFilename, parentRawFile);
@@ -1480,7 +1477,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 						deletedAndRenamedFileParentDirectories.add(previousFilename.substring(0, previousFilename.lastIndexOf("/")));
 					}
 				}
-				catch(IOException e) {
+				catch(IOException | URISyntaxException e) {
 					e.printStackTrace();
 				}
 			};
@@ -1697,11 +1694,10 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 							}
 							else {
 								URL currentRawURL = commitFile.getRawUrl();
-								InputStream currentRawFileInputStream = currentRawURL.openStream();
-								currentRawFile = streamToString(currentRawFileInputStream);
+								currentRawFile = fetchRawFileContent(currentRawURL);
 								String rawURLInParentCommit = currentRawURL.toString().replace(commitId, parentCommitId);
-								InputStream parentRawFileInputStream = new URL(rawURLInParentCommit).openStream();
-								parentRawFile = streamToString(parentRawFileInputStream);
+								URL parentRawURL = new URI(rawURLInParentCommit).toURL();
+								parentRawFile = fetchRawFileContent(parentRawURL);
 							}
 							filesBefore.put(fileName, parentRawFile);
 							filesCurrent.put(fileName, currentRawFile);
@@ -1710,7 +1706,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 							File currentFilePath = new File(rootFolder, repoName + "-" + currentCommitId + "/" + fileName);
 							FileUtils.writeStringToFile(currentFilePath, currentRawFile, StandardCharsets.UTF_8);
 						}
-						catch(IOException e) {
+						catch(IOException | URISyntaxException e) {
 							e.printStackTrace();
 						}
 					};
@@ -1726,8 +1722,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 							}
 							else {
 								URL currentRawURL = commitFile.getRawUrl();
-								InputStream currentRawFileInputStream = currentRawURL.openStream();
-								currentRawFile = streamToString(currentRawFileInputStream);
+								currentRawFile = fetchRawFileContent(currentRawURL);
 							}
 							filesCurrent.put(fileName, currentRawFile);
 							File currentFilePath = new File(rootFolder, repoName + "-" + currentCommitId + "/" + fileName);
@@ -1749,8 +1744,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 							}
 							else {
 								URL rawURL = commitFile.getRawUrl();
-								InputStream rawFileInputStream = rawURL.openStream();
-								parentRawFile = streamToString(rawFileInputStream);
+								parentRawFile = fetchRawFileContent(rawURL);
 							}
 							filesBefore.put(fileName, parentRawFile);
 							if(fileName.contains("/")) {
@@ -1780,13 +1774,12 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 							}
 							else {
 								URL currentRawURL = commitFile.getRawUrl();
-								InputStream currentRawFileInputStream = currentRawURL.openStream();
-								currentRawFile = streamToString(currentRawFileInputStream);
+								currentRawFile = fetchRawFileContent(currentRawURL);
 								String encodedFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
 								String encodedPreviousFilename = URLEncoder.encode(previousFilename, StandardCharsets.UTF_8);
 								String rawURLInParentCommit = currentRawURL.toString().replace(commitId, parentCommitId).replace(encodedFileName, encodedPreviousFilename);
-								InputStream parentRawFileInputStream = new URL(rawURLInParentCommit).openStream();
-								parentRawFile = streamToString(parentRawFileInputStream);
+								URL parentRawURL = new URI(rawURLInParentCommit).toURL();
+								parentRawFile = fetchRawFileContent(parentRawURL);
 							}
 							filesBefore.put(previousFilename, parentRawFile);
 							filesCurrent.put(fileName, currentRawFile);
@@ -1799,7 +1792,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 							File currentFilePath = new File(rootFolder, repoName + "-" + currentCommitId + "/" + fileName);
 							FileUtils.writeStringToFile(currentFilePath, currentRawFile, StandardCharsets.UTF_8);
 						}
-						catch(IOException e) {
+						catch(IOException | URISyntaxException e) {
 							e.printStackTrace();
 						}
 					};
@@ -1883,6 +1876,73 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 		}
 	}
 	*/
+
+	public void detectAtPullRequest(String cloneURL, int pullRequestId, RefactoringHandler handler) {
+		try {
+			GHRepository repository = getGitHubRepository(cloneURL);
+			GHPullRequest pullRequest = repository.getPullRequest(pullRequestId);
+			Map<String, String> filesBefore = new ConcurrentHashMap<String, String>();
+			Map<String, String> filesCurrent = new ConcurrentHashMap<String, String>();
+			Map<String, String> renamedFilesHint = new ConcurrentHashMap<String, String>();
+			Set<String> repositoryDirectoriesBefore = ConcurrentHashMap.newKeySet();
+			Set<String> repositoryDirectoriesCurrent = ConcurrentHashMap.newKeySet();
+			Set<String> deletedAndRenamedFileParentDirectories = ConcurrentHashMap.newKeySet();
+			List<String> commitFileNames = new ArrayList<>();
+			PagedIterable<GHPullRequestFileDetail> files = pullRequest.listFiles();
+			int changedFiles = pullRequest.getChangedFiles();
+			if(changedFiles == 0) {
+				changedFiles = 10;
+			}
+			ExecutorService pool = Executors.newFixedThreadPool(changedFiles);
+			int count = 1;
+			String headSha = pullRequest.getHead().getSha();
+			String mergeBaseSha = repository.getCompare(pullRequest.getBase().getSha(), headSha).getMergeBaseCommit().getSHA1();
+			for(GHPullRequestFileDetail commitFile : files) {
+				String fileName = commitFile.getFilename();
+				if (PathFileUtils.isSupportedFile(commitFile.getFilename())) {
+					commitFileNames.add(fileName);
+					logger.info(String.format("Processing file: " + fileName));
+					//sleep every 100 files to avoid HTTP 403 error
+					if (count % 100 == 0) {
+						Thread.sleep(500);
+					}
+					multiThreadedFetch(filesBefore, filesCurrent, renamedFilesHint, repositoryDirectoriesBefore,
+							repositoryDirectoriesCurrent, deletedAndRenamedFileParentDirectories, commitFileNames, pool,
+							commitFile, fileName, headSha, mergeBaseSha);
+					count++;
+				}
+			}
+			pool.shutdown();
+			pool.awaitTermination(Long.MAX_VALUE, TimeUnit.MILLISECONDS);
+			Map<String, String> filesContentsBefore = new LinkedHashMap<String, String>();
+			Map<String, String> filesContentsCurrent = new LinkedHashMap<String, String>();
+			for(String fileName : commitFileNames) {
+				if(filesBefore.containsKey(fileName)) {
+					filesContentsBefore.put(fileName, filesBefore.get(fileName));
+				}
+				if(filesCurrent.containsKey(fileName)) {
+					filesContentsCurrent.put(fileName, filesCurrent.get(fileName));
+				}
+			}
+			List<MoveSourceFolderRefactoring> moveSourceFolderRefactorings = processIdenticalFiles(filesContentsBefore, filesContentsCurrent, renamedFilesHint, true);
+			UMLModel currentUMLModel = createModelForASTDiff(filesContentsCurrent, repositoryDirectoriesCurrent);
+			UMLModel parentUMLModel = createModelForASTDiff(filesContentsBefore, repositoryDirectoriesBefore);
+			UMLModelDiff modelDiff = parentUMLModel.diff(currentUMLModel);
+			List<Refactoring> refactoringsAtRevision = modelDiff.getRefactorings();
+			refactoringsAtRevision.addAll(moveSourceFolderRefactorings);
+			refactoringsAtRevision = filter(refactoringsAtRevision);
+			handler.handle(String.valueOf(pullRequestId), refactoringsAtRevision);
+			handler.handleModelDiff(String.valueOf(pullRequestId), refactoringsAtRevision, modelDiff);
+		}
+		catch(RefactoringMinerTimedOutException e) {
+			logger.warn(String.format("Ignored PR %s due to timeout", pullRequestId), e);
+			handler.handleException(String.valueOf(pullRequestId), e);
+		}
+		catch (Exception e) {
+			logger.warn(String.format("Ignored PR %s due to error", pullRequestId), e);
+			handler.handleException(String.valueOf(pullRequestId), e);
+		}
+	}
 
 	@Override
 	public void detectAtPullRequest(String cloneURL, int pullRequestId, RefactoringHandler handler, int timeout) throws IOException {
@@ -2158,6 +2218,8 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 			}
 			ExecutorService pool = Executors.newFixedThreadPool(changedFiles);
 			int count = 1;
+			String headSha = pullRequest.getHead().getSha();
+			String mergeBaseSha = repository.getCompare(pullRequest.getBase().getSha(), headSha).getMergeBaseCommit().getSHA1();
 			for(GHPullRequestFileDetail commitFile : files) {
 				String fileName = commitFile.getFilename();
 				if (PathFileUtils.isSupportedFile(commitFile.getFilename())) {
@@ -2169,7 +2231,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 					}
 					multiThreadedFetch(filesBefore, filesCurrent, renamedFilesHint, repositoryDirectoriesBefore,
 							repositoryDirectoriesCurrent, deletedAndRenamedFileParentDirectories, commitFileNames, pool,
-							commitFile, fileName);
+							commitFile, fileName, headSha, mergeBaseSha);
 					count++;
 				}
 			}
@@ -2228,22 +2290,32 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 		return diffs.iterator().next();
 	}
 
+	private String fetchRawFileContent(URL rawURL) throws IOException {
+		URLConnection connection = rawURL.openConnection();
+		connection.setRequestProperty("User-Agent", "Mozilla/5.0");
+		return streamToString(connection.getInputStream());
+	}
+
 	private void multiThreadedFetch(Map<String, String> filesBefore, Map<String, String> filesCurrent,
 			Map<String, String> renamedFilesHint, Set<String> repositoryDirectoriesBefore,
 			Set<String> repositoryDirectoriesCurrent, Set<String> deletedAndRenamedFileParentDirectories,
-			List<String> commitFileNames, ExecutorService pool, GHPullRequestFileDetail commitFile, String fileName) {
+			List<String> commitFileNames, ExecutorService pool, GHPullRequestFileDetail commitFile, String fileName, String headSha, String mergeBaseSha) {
 		if (commitFile.getStatus().equals("modified")) {
 			Runnable r = () -> {
 				try {
 					URL currentRawURL = commitFile.getRawUrl();
-					URLConnection connection = currentRawURL.openConnection();
-					connection.setRequestProperty("User-Agent", "Mozilla/5.0");
-					InputStream currentRawFileInputStream = connection.getInputStream();
-					String currentRawFile = streamToString(currentRawFileInputStream);
+					String currentRawFile = fetchRawFileContent(currentRawURL);
 					List<String> patchLineList = createPatchLines(commitFile);
-					com.github.difflib.patch.Patch<String> patch = UnifiedDiffUtils.parseUnifiedDiff(patchLineList);
-					List<String> parentRawFileLines = DiffUtils.unpatch(Arrays.asList(currentRawFile.split("\\n")), patch);
-					String parentRawFile = String.join("\n", parentRawFileLines);
+					String parentRawFile = null;
+					if(patchLineList.isEmpty() && commitFile.getChanges() > 0) {
+						URL parentRawURL = new URI(currentRawURL.toString().replace(headSha, mergeBaseSha)).toURL();
+						parentRawFile = fetchRawFileContent(parentRawURL);
+					}
+					else {
+						com.github.difflib.patch.Patch<String> patch = UnifiedDiffUtils.parseUnifiedDiff(patchLineList);
+						List<String> parentRawFileLines = DiffUtils.unpatch(Arrays.asList(currentRawFile.split("\\n")), patch);
+						parentRawFile = String.join("\n", parentRawFileLines);
+					}
 					filesBefore.put(fileName, parentRawFile);
 					filesCurrent.put(fileName, currentRawFile);
 					String directory = new String(fileName);
@@ -2253,7 +2325,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 						repositoryDirectoriesCurrent.add(directory);
 					}
 				}
-				catch(IOException e) {
+				catch(IOException | URISyntaxException e) {
 					e.printStackTrace();
 				}
 			};
@@ -2263,8 +2335,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 			Runnable r = () -> {
 				try {
 					URL currentRawURL = commitFile.getRawUrl();
-					InputStream currentRawFileInputStream = currentRawURL.openStream();
-					String currentRawFile = streamToString(currentRawFileInputStream);
+					String currentRawFile = fetchRawFileContent(currentRawURL);
 					filesCurrent.put(fileName, currentRawFile);
 				}
 				catch(IOException e) {
@@ -2277,8 +2348,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 			Runnable r = () -> {
 				try {
 					URL rawURL = commitFile.getRawUrl();
-					InputStream rawFileInputStream = rawURL.openStream();
-					String parentRawFile = streamToString(rawFileInputStream);
+					String parentRawFile = fetchRawFileContent(rawURL);
 					filesBefore.put(fileName, parentRawFile);
 					if(fileName.contains("/")) {
 						deletedAndRenamedFileParentDirectories.add(fileName.substring(0, fileName.lastIndexOf("/")));
@@ -2296,12 +2366,20 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 				try {
 					String previousFilename = commitFile.getPreviousFilename();
 					URL currentRawURL = commitFile.getRawUrl();
-					InputStream currentRawFileInputStream = currentRawURL.openStream();
-					String currentRawFile = streamToString(currentRawFileInputStream);
+					String currentRawFile = fetchRawFileContent(currentRawURL);
 					List<String> patchLineList = createPatchLines(commitFile);
-					com.github.difflib.patch.Patch<String> patch = UnifiedDiffUtils.parseUnifiedDiff(patchLineList);
-					List<String> parentRawFileLines = DiffUtils.unpatch(Arrays.asList(currentRawFile.split("\\n")), patch);
-					String parentRawFile = String.join("\n", parentRawFileLines);
+					String parentRawFile;
+					if(patchLineList.isEmpty() && commitFile.getChanges() > 0) {
+						String encodedFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
+						String encodedPreviousFilename = URLEncoder.encode(previousFilename, StandardCharsets.UTF_8);
+						URL parentRawURL = new URI(currentRawURL.toString().replace(headSha, mergeBaseSha).replace(encodedFileName, encodedPreviousFilename)).toURL();
+						parentRawFile = fetchRawFileContent(parentRawURL);
+					}
+					else {
+						com.github.difflib.patch.Patch<String> patch = UnifiedDiffUtils.parseUnifiedDiff(patchLineList);
+						List<String> parentRawFileLines = DiffUtils.unpatch(Arrays.asList(currentRawFile.split("\\n")), patch);
+						parentRawFile = String.join("\n", parentRawFileLines);
+					}
 					filesBefore.put(previousFilename, parentRawFile);
 					filesCurrent.put(fileName, currentRawFile);
 					renamedFilesHint.put(previousFilename, fileName);
@@ -2319,7 +2397,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 						repositoryDirectoriesBefore.add(directory);
 					}
 				}
-				catch(IOException e) {
+				catch(IOException | URISyntaxException e) {
 					e.printStackTrace();
 				}
 			};
@@ -2534,8 +2612,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 	public ProjectASTDiff diffAtFileContents(Map<String, String> fileContentsBefore, Map<String, String> fileContentsAfter) throws Exception {
 		Set<String> repositoryDirectoriesBefore = populateDirectories(fileContentsBefore);
 		Set<String> repositoryDirectoriesCurrent = populateDirectories(fileContentsAfter);
-        // TODO I think this is unncessary in this case. requires @tsantalis verification
-//		List<MoveSourceFolderRefactoring> moveSourceFolderRefactorings = processIdenticalFiles(fileContentsBefore, fileContentsAfter, Collections.emptyMap(), true);
+		List<MoveSourceFolderRefactoring> moveSourceFolderRefactorings = processIdenticalFiles(fileContentsBefore, fileContentsAfter, Collections.emptyMap(), true);
 		UMLModel parentUMLModel = createModelForASTDiff(fileContentsBefore, repositoryDirectoriesBefore);
 		UMLModel currentUMLModel = createModelForASTDiff(fileContentsAfter, repositoryDirectoriesCurrent);
 		UMLModelDiff modelDiff = parentUMLModel.diff(currentUMLModel);
@@ -2561,7 +2638,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 			final String commitId = currentGHCommit.getSHA1();
 			logger.info("Processing {} {} ...", cloneURL, commitId);
 			GHCommit currentCommit = repository.getCommit(commitId);
-	    	List<GHCommit.File> commitFiles = currentCommit.listFiles().toList();
+			List<GHCommit.File> commitFiles = currentCommit.listFiles().toList();
 			//if parents.size() == 0 then currentCommit is the initial commit of the repository, but then all files will have an ADDED status
 			final String parentCommitId = currentCommit.getParents().size() > 0 ? currentCommit.getParents().get(0).getSHA1() : null;
 			Set<String> deletedAndRenamedFileParentDirectories = ConcurrentHashMap.newKeySet();
@@ -2584,17 +2661,16 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 								}
 								else {
 									URL currentRawURL = commitFile.getRawUrl();
-									InputStream currentRawFileInputStream = currentRawURL.openStream();
-									currentRawFile = streamToString(currentRawFileInputStream);
+									currentRawFile = fetchRawFileContent(currentRawURL);
 									String rawURLInParentCommit = currentRawURL.toString().replace(commitId, parentCommitId);
-									InputStream parentRawFileInputStream = new URL(rawURLInParentCommit).openStream();
-									parentRawFile = streamToString(parentRawFileInputStream);
+									URL parentRawURL = new URI(rawURLInParentCommit).toURL();
+									parentRawFile = fetchRawFileContent(parentRawURL);
 								}
 								if(!filesBefore.containsKey(fileName))
 									filesBefore.put(fileName, parentRawFile);
 								filesCurrent.put(fileName, currentRawFile);
 							}
-							catch(IOException e) {
+							catch(IOException | URISyntaxException e) {
 								e.printStackTrace();
 							}
 						};
@@ -2610,8 +2686,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 								}
 								else {
 									URL currentRawURL = commitFile.getRawUrl();
-									InputStream currentRawFileInputStream = currentRawURL.openStream();
-									currentRawFile = streamToString(currentRawFileInputStream);
+									currentRawFile = fetchRawFileContent(currentRawURL);
 								}
 								filesCurrent.put(fileName, currentRawFile);
 							}
@@ -2631,8 +2706,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 								}
 								else {
 									URL rawURL = commitFile.getRawUrl();
-									InputStream rawFileInputStream = rawURL.openStream();
-									parentRawFile = streamToString(rawFileInputStream);
+									parentRawFile = fetchRawFileContent(rawURL);
 								}
 								if(!filesBefore.containsKey(fileName))
 									filesBefore.put(fileName, parentRawFile);
@@ -2661,13 +2735,12 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 								}
 								else {
 									URL currentRawURL = commitFile.getRawUrl();
-									InputStream currentRawFileInputStream = currentRawURL.openStream();
-									currentRawFile = streamToString(currentRawFileInputStream);
+									currentRawFile = fetchRawFileContent(currentRawURL);
 									String encodedFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
 									String encodedPreviousFilename = URLEncoder.encode(previousFilename, StandardCharsets.UTF_8);
 									String rawURLInParentCommit = currentRawURL.toString().replace(commitId, parentCommitId).replace(encodedFileName, encodedPreviousFilename);
-									InputStream parentRawFileInputStream = new URL(rawURLInParentCommit).openStream();
-									parentRawFile = streamToString(parentRawFileInputStream);
+									URL parentRawURL = new URI(rawURLInParentCommit).toURL();
+									parentRawFile = fetchRawFileContent(parentRawURL);
 								}
 								if(!filesBefore.containsKey(fileName))
 									filesBefore.put(previousFilename, parentRawFile);
@@ -2677,7 +2750,7 @@ public class GitHistoryRefactoringMinerImpl implements GitHistoryRefactoringMine
 									deletedAndRenamedFileParentDirectories.add(previousFilename.substring(0, previousFilename.lastIndexOf("/")));
 								}
 							}
-							catch(IOException e) {
+							catch(IOException | URISyntaxException e) {
 								e.printStackTrace();
 							}
 						};
